5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4144/executions/1593_1802.log
== TEST (2019-03-26 11:22:35) 
-- CODE:
from math import*
pm = float(input("pontos do monstro: "))
d1 = int(input("dado1: "))
d2 = int(input("dado2: "))
dano = abs(sqrt(5 * d1) +  pi ** (d2 /3)
virest = (pm - dano)
print(virest)
-- ERROR:
File "XXXX", line 6
    virest = (pm - dano)
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:23:05) 
-- CODE:
from math import*
pm = float(input("pontos do monstro: "))
d1 = int(input("dado1: "))
d2 = int(input("dado2: "))
dano = abs(sqrt(5 * d1) +  pi ** (d2 /3))
virest = (pm - dano)
print(virest)
-- OUTPUT:
187.89432762141087
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:23:59) 
-- CODE:
from math import*
pm = float(input("pontos do monstro: "))
d1 = int(input("dado1: "))
d2 = int(input("dado2: "))
dano = abs(sqrt(5 * d1) +  pi ** (d2 /3))
virest = (pm - dano)
print(round(virest, 0))
-- OUTPUT:
188.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:24:40) 
-- CODE:
from math import*
pm = int(input("pontos do monstro: "))
d1 = int(input("dado1: "))
d2 = int(input("dado2: "))
dano = abs(sqrt(5 * d1) +  pi ** (d2 /3))
virest = (pm - dano)
print(round(virest, 0))
-- OUTPUT:
188.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:25:14) 
-- CODE:
from math import*
pm = int(input("pontos do monstro: "))
d1 = int(input("dado1: "))
d2 = int(input("dado2: "))
dano = abs(sqrt(5 * d1) +  pi ** (d2 /3))
virest = (pm - dano)
print((virest)
-- ERROR:
File "XXXX", line 8
    
                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:25:22) 
-- CODE:
from math import*
pm = int(input("pontos do monstro: "))
d1 = int(input("dado1: "))
d2 = int(input("dado2: "))
dano = abs(sqrt(5 * d1) +  pi ** (d2 /3))
virest = (pm - dano)
print(virest)
-- OUTPUT:
187.89432762141087
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:25:53) 
-- CODE:
from math import*
pm = int(input("pontos do monstro: "))
d1 = int(input("dado1: "))
d2 = int(input("dado2: "))
dano = abs(sqrt(5 * d1) +  pi ** (d2 /3))
virest = (pm - dano)
print(virest)
-- EXECUTION TIME:
0.173736
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
187.89432762141087
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
284.653170023859
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496.2993401349387
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:26:18) 
-- CODE:
from math import*
pm = int(input("pontos do monstro: "))
d1 = int(input("dado1: "))
d2 = int(input("dado2: "))
dano = int(abs(sqrt(5 * d1) +  pi ** (d2 /3)))
virest = (pm - dano)
print(virest)
-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:27:34) 
-- CODE:
from math import*
pm = int(input("pontos do monstro: "))
d1 = int(input("dado1: "))
d2 = int(input("dado2: "))
dano = int(abs(sqrt(5 * d1) +  pi ** (d2 /3)))
virest = (pm - dano)
print(virest)
-- EXECUTION TIME:
0.1255
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
